# stock-prediction-api

./: .gitignore  compose.yml  package.json  readme.md
data/: facility-metadata.json  total-accuracy.csv
data/ackerman/: accuracy.csv  energy-totals.csv  post-validation-june-2025.csv  predictions-90.csv
data/acmachado/: accuracy.csv  energy-totals.csv  post-validation-june-2025.csv  predictions-90.csv
data/alamo/: accuracy.csv  energy-totals.csv  post-validation-june-2025.csv  predictions-90.csv  weather.csv
data/albertmendes/: accuracy.csv  energy-totals.csv  post-validation-june-2025.csv  predictions-90.csv  weather.csv
data/doubled/: accuracy.csv  energy-totals.csv  post-validation-june-2025.csv  predictions-90.csv
data/hilmar/: accuracy.csv  energy-totals.csv  (+3 more)
docs/: Results - Factors Key to Energy.md  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json  typedoc.json
prediction-api/: Dockerfile  config.py  data_loader.py  evaluation.py  feature_engineering.py  generate_custom_predictions.py  main.py  model_training.py  models.py  output_all_model_predictions.py  predict-90-days.py  pyproject.toml  test_accuracy_weights.py  test_custom_predictions.py  test_features.py  test_weighted_ensemble.py  utils.py  validation_months.py
prediction-api-client/: openapi-schema.json  package.json  tsconfig.json
prediction-test/: call-predict.js
stock-data/: csv_to_json_converter.py  sp500_companies.json
stocks-api/: pe.js  test.py
stocks-web-ui/: package.json
web/: .gitignore  openapi.json  package.json  tailwind.config.ts  tsconfig.json
(+129 files in other folders)
